[MSS:489] alignment fixed

--- a/movado_redesign/cartridges/app_custom_movado_redesign/cartridge/client/default/scss/product/detail.scss
+++ b/movado_redesign/cartridges/app_custom_movado_redesign/cartridge/client/default/scss/product/detail.scss
@@ -1377,3 +1377,9 @@ body {
         width: 100%;
     }
 }
+
+@include media-breakpoint-up(md) {
+    .modern-cart-wishlist {
+        padding-left: rem(56);
+}
+}
